--- a/ecoplastol/frmPlanowanie.xaml
+++ b/ecoplastol/frmPlanowanie.xaml
@@ -7,7 +7,25 @@
         mc:Ignorable="d"
         Title="Planowanie" Height="450" Width="800" WindowState="Maximized">
     <Window.Resources>
-        
+        <ResourceDictionary>
+
+                <Style TargetType="Button" x:Key="ButtonGradient">
+                    <Setter Property="Background">
+                        <Setter.Value>
+                        <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
+                            <GradientStop Color="LightGreen" Offset="1">
+
+                            </GradientStop>
+                            <GradientStop Color="White" Offset="0.01">
+
+                            </GradientStop>
+
+                        </LinearGradientBrush>
+                    </Setter.Value>
+                    </Setter>
+                </Style>
+
+        </ResourceDictionary>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -28,8 +46,8 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="100"/>
+                <RowDefinition Height="60"/>
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
@@ -53,7 +71,12 @@
             <Border Grid.Row="9" Grid.Column="1" Margin="0,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
             <Border Grid.Row="10" Grid.Column="1" Margin="0,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
             <Border Grid.Row="11" Grid.Column="1" Margin="0,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
-            <Border Grid.Row="0" Grid.Column="2" Margin="-1,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
+            <!--<Border Grid.Row="0" Grid.Column="2" Margin="-1,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />-->
+            <ScrollViewer Grid.Row="0" Grid.Column="2">
+            <Grid  Margin="-1,0,0,-1" Background="White" Name="ParentGrid" >
+                
+            </Grid>
+            </ScrollViewer>
             <Border Grid.Row="1" Grid.Column="2" Margin="-1,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
             <Border Grid.Row="2" Grid.Column="2" Margin="-1,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
             <Border Grid.Row="3" Grid.Column="2" Margin="-1,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
@@ -93,7 +116,7 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Label Grid.Row="1" Content="M2" FontSize="14" FontWeight="Bold" Padding="5,0,0,0"/>
-                <Button Grid.Row="2" Content="DODAJ" x:Name="btnDodajM2" VerticalAlignment="Bottom"/>
+                <Button Grid.Row="2" Content="DODAJ" x:Name="btnDodajM2" VerticalAlignment="Bottom" Style="{StaticResource ButtonGradient}"/>
             </Grid>
             <Grid Grid.Row="2" Grid.Column="1">
                 <Grid.RowDefinitions>
