--- a/ecoplastol/frmPlanowanie.xaml
+++ b/ecoplastol/frmPlanowanie.xaml
@@ -9,9 +9,9 @@
     <Window.Resources>
         <ResourceDictionary>
 
-                <Style TargetType="Button" x:Key="ButtonGradient">
-                    <Setter Property="Background">
-                        <Setter.Value>
+            <Style TargetType="Button" x:Key="ButtonGradient">
+                <Setter Property="Background">
+                    <Setter.Value>
                         <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
                             <GradientStop Color="LightGreen" Offset="1">
 
@@ -22,8 +22,8 @@
 
                         </LinearGradientBrush>
                     </Setter.Value>
-                    </Setter>
-                </Style>
+                </Setter>
+            </Style>
 
         </ResourceDictionary>
     </Window.Resources>
@@ -73,9 +73,9 @@
             <Border Grid.Row="11" Grid.Column="1" Margin="0,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
             <!--<Border Grid.Row="0" Grid.Column="2" Margin="-1,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />-->
             <ScrollViewer Grid.Row="0" Grid.Column="2">
-            <Grid  Margin="-1,0,0,-1" Background="White" Name="ParentGrid" >
-                
-            </Grid>
+                <Grid  Margin="-1,0,0,-1" Background="White" Name="ParentGrid" >
+
+                </Grid>
             </ScrollViewer>
             <Border Grid.Row="1" Grid.Column="2" Margin="-1,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
             <Border Grid.Row="2" Grid.Column="2" Margin="-1,0,0,-1" Background="White" BorderBrush="LightGray" BorderThickness="1" />
@@ -110,6 +110,9 @@
                 </Button>
             </Grid>
             <Grid Grid.Row="1" Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition Height="*"/>
