--- a/ecoplastol/frmPlanowanie.xaml
+++ b/ecoplastol/frmPlanowanie.xaml
@@ -95,7 +95,7 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Label Grid.Row="1" Content="1" FontSize="24" FontWeight="Bold" Padding="5,0,0,0"/>
-                <Button Grid.Row="2" Content="DODAJ" x:Name="btnDodajM1" VerticalAlignment="Bottom" Click="BtnDodajM1_Click">
+                <Button Grid.Row="2" x:Name="btnDodajM1" VerticalAlignment="Bottom" Click="BtnDodajM1_Click">
                     <Button.Background>
                         <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
                             <GradientStop Color="LightGreen" Offset="1">
@@ -107,19 +107,21 @@
 
                         </LinearGradientBrush>
                     </Button.Background>
+                    
                 </Button>
             </Grid>
             <Grid Grid.Row="1" Grid.Column="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
+                    <ColumnDefinition Width="17*"/>
+                    <ColumnDefinition Width="3*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition Height="*"/>
                     <RowDefinition />
                 </Grid.RowDefinitions>
-                <Label Grid.Row="1" Content="M2" FontSize="14" FontWeight="Bold" Padding="5,0,0,0"/>
-                <Button Grid.Row="2" Content="DODAJ" x:Name="btnDodajM2" VerticalAlignment="Bottom" Style="{StaticResource ButtonGradient}"/>
+                <Label Grid.Row="1" Content="M2" FontSize="14" FontWeight="Bold" Padding="5,0,0,0" Grid.ColumnSpan="2"/>
+                <Button Grid.Row="2" Content="DODAJ" x:Name="btnDodajM2" VerticalAlignment="Bottom" Style="{StaticResource ButtonGradient}" Grid.ColumnSpan="2" Click="BtnDodajM2_Click"/>
             </Grid>
             <Grid Grid.Row="2" Grid.Column="1">
                 <Grid.RowDefinitions>
