--- a/ecoplastol/frmZlecenieProdukcji.xaml
+++ b/ecoplastol/frmZlecenieProdukcji.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ecoplastol"
         xmlns:ts="clr-namespace:ecoplastol"
         mc:Ignorable="d"
-        Title="Zlecenie produkcji" Height="500" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Zlecenie produkcji" Height="600" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
 
         <ResourceDictionary>
@@ -61,9 +61,11 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition Height="30"/>
+            <RowDefinition Height="15"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="1"/>
             <RowDefinition Height="30"/>
+
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
@@ -108,25 +110,27 @@
                 </ts:ComboBoxItemTemplateSelector>
             </ComboBox.ItemTemplateSelector>
         </ComboBox>
-        <Border Grid.Row="3" Grid.ColumnSpan="4" BorderThickness="1" BorderBrush="black"></Border>
-        <Label Grid.Row="4" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Ilość :"/>
-        <Label Grid.Row="5" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Data rozpoczęcia :"/>
-        <DatePicker Grid.Row="5" Grid.Column="1" FontSize="16" CalendarStyle="{StaticResource styleCalendar}"/>
-        <Label Grid.Row="6" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Data zakończenia :"/>
+        <!--<Border Grid.Row="3" Grid.ColumnSpan="4" BorderThickness="1" BorderBrush="black"></Border>-->
+        <Label Grid.Row="2" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="12" Content="index"/>
+        <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="12" Content="opis"/>
+        <Label Grid.Row="5" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Ilość :"/>
+        <Label Grid.Row="6" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Data rozpoczęcia :"/>
         <DatePicker Grid.Row="6" Grid.Column="1" FontSize="16" CalendarStyle="{StaticResource styleCalendar}"/>
-        <Label Grid.Row="7" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Nr partii surowca :"/>
-        <Label Grid.Row="7" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Mieszanka :"/>
-        <Label Grid.Row="8" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Nr partii drutu :"/>
-        <Label Grid.Row="8" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Rodzaj drutu :"/>
-        <Label Grid.Row="9" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Oporność :"/>
-        <Label Grid.Row="10" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Nr partii produkcyjnej :"/>
-        <Label Grid.Row="10" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Zakład produkcyjny :"/>
-        <Label Grid.Row="11" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="SDR :"/>
-        <Label Grid.Row="11" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Zakres SDR :"/>
-        <Label Grid.Row="12" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas zgrzewania 1 :"/>
-        <Label Grid.Row="12" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas zgrzewania 2 :"/>
-        <Label Grid.Row="13" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas chłodzenia 1 :"/>
-        <Label Grid.Row="13" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas chłodzenia 2 :"/>
+        <Label Grid.Row="7" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Data zakończenia :"/>
+        <DatePicker Grid.Row="7" Grid.Column="1" FontSize="16" CalendarStyle="{StaticResource styleCalendar}"/>
+        <Label Grid.Row="8" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Nr partii surowca :"/>
+        <Label Grid.Row="8" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Mieszanka :"/>
+        <Label Grid.Row="9" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Nr partii drutu :"/>
+        <Label Grid.Row="9" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Rodzaj drutu :"/>
+        <Label Grid.Row="10" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Oporność :"/>
+        <Label Grid.Row="11" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Nr partii produkcyjnej :"/>
+        <Label Grid.Row="11" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Zakład produkcyjny :"/>
+        <Label Grid.Row="12" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="SDR :"/>
+        <Label Grid.Row="12" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Zakres SDR :"/>
+        <Label Grid.Row="13" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas zgrzewania 1 :"/>
+        <Label Grid.Row="13" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas zgrzewania 2 :"/>
+        <Label Grid.Row="14" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas chłodzenia 1 :"/>
+        <Label Grid.Row="14" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas chłodzenia 2 :"/>
         
         
         
@@ -136,8 +140,8 @@
         
         
         
-        <Button Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="2" FontSize="22" Style="{StaticResource btnGradientLightGreen}" Content="D O D A J"/>
-        <Button Grid.Row="15" Grid.Column="2" Grid.ColumnSpan="2" FontSize="22" Style="{StaticResource btnGradientRed}" Content="A N U L U J" Click="Button_Click"/>
+        <Button Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="2" FontSize="22" Style="{StaticResource btnGradientLightGreen}" Content="D O D A J"/>
+        <Button Grid.Row="16" Grid.Column="2" Grid.ColumnSpan="2" FontSize="22" Style="{StaticResource btnGradientRed}" Content="A N U L U J" Click="Button_Click"/>
         
 
 
